# pdf-prepender

./: .gitignore  pyproject.toml
examples/: basic_usage.py  full_feature_test.py
pdf_prepender/: __init__.py
pdf_prepender/core/: __init__.py  document_builder.py  link_annotator.py  link_manager.py  page_generator.py  pdf_merger.py
pdf_prepender/models/: __init__.py  schema.py
pdf_prepender/parsers/: __init__.py  json_parser.py  text_formatter.py
pdf_prepender/tests/: __init__.py  conftest.py  test_document_builder.py  test_link_manager.py  test_text_formatter.py
